pnmdec: SIGSEGV when parsing .pbm file
Investigating a crash from track-miners led to a segfault from gstreamer when parsing a .bpm file: curs10.pbm
Here is what parsing with GST_DEBUG=*:2 gst-launch-1.0 playbin uri=file:///curs10.pbm
gives:
Setting pipeline to PAUSED ...
0:00:00.012303015 395253 0x55ba79419560 WARN basesrc gstbasesrc.c:3600:gst_base_src_start_complete:<source> pad not activated yet
0:00:00.012468004 395253 0x55ba79419560 WARN basesrc gstbasesrc.c:3600:gst_base_src_start_complete:<source> pad not activated yet
Pipeline is PREROLLING ...
0:00:00.032713681 395253 0x55ba792d1ed0 WARN videodecoder gstvideodecoder.c:2423:gst_video_decoder_chain:<pnmdec0> Received buffer without a new-segment. Assuming timestamps start from 0.
0:00:00.032726820 395253 0x55ba792d1ed0 WARN typefind gsttypefindelement.c:1228:gst_type_find_element_loop:<typefind> error: Internal data stream error.
0:00:00.032730950 395253 0x55ba792d1ed0 WARN typefind gsttypefindelement.c:1228:gst_type_find_element_loop:<typefind> error: streaming stopped, reason error (-5)
Caught SIGSEGV
ERROR: from element /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstTypeFindElement:typefind: Internal data stream error.
Additional debug info:
../gstreamer/plugins/elements/gsttypefindelement.c(1228): gst_type_find_element_loop (): /GstPlayBin:playbin0/GstURIDecodeBin:uridecodebin0/GstDecodeBin:decodebin0/GstTypeFindElement:typefind:
streaming stopped, reason error (-5)
ERROR: pipeline doesn't want to preroll.
Setting pipeline to NULL ...
- ArchLinux
- gstreamer and gst-plugins-bad 1.16.1
Edited by Tim-Philipp Müller